[project]
name = "cv-a1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.39.1",
    "ipywidgets>=8.1.7",
    "marimo>=0.16.2",
    "notebook>=7.4.6",
    "numpy>=2.3.3",
    "openai>=2.0.0",
    "opencv-python>=4.11.0.86",
    "python-socks>=2.7.2",
    "ruff>=0.13.2",
    "scikit-image[optional]>=0.25.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]
